okay gonna stop cropping images. ux can do that

--- a/client/src/screens/Volunteer/Volunteer.css
+++ b/client/src/screens/Volunteer/Volunteer.css
@@ -3,7 +3,7 @@
 }
 
 .volunteer__banner {
-  background: gray;
+  background: transparent;
   display: flex;
   height: 420px;
   overflow: hidden;
